; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/text-freetype2/extr_text-freetype2.c_init_font.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/text-freetype2/extr_text-freetype2.c_init_font.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ft2_source = type { i32*, i32, i32, i32, i32 }

@ft2_lib = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ft2_source*)* @init_font to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_font(%struct.ft2_source* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ft2_source*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store %struct.ft2_source* %0, %struct.ft2_source** %3, align 8
  %6 = load %struct.ft2_source*, %struct.ft2_source** %3, align 8
  %7 = getelementptr inbounds %struct.ft2_source, %struct.ft2_source* %6, i32 0, i32 4
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.ft2_source*, %struct.ft2_source** %3, align 8
  %10 = getelementptr inbounds %struct.ft2_source, %struct.ft2_source* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 8
  %12 = load %struct.ft2_source*, %struct.ft2_source** %3, align 8
  %13 = getelementptr inbounds %struct.ft2_source, %struct.ft2_source* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.ft2_source*, %struct.ft2_source** %3, align 8
  %16 = getelementptr inbounds %struct.ft2_source, %struct.ft2_source* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = call i8* @get_font_path(i32 %8, i32 %11, i32 %14, i32 %17, i32* %4)
  store i8* %18, i8** %5, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %43

22:                                               ; preds = %1
  %23 = load %struct.ft2_source*, %struct.ft2_source** %3, align 8
  %24 = getelementptr inbounds %struct.ft2_source, %struct.ft2_source* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %27, label %34

27:                                               ; preds = %22
  %28 = load %struct.ft2_source*, %struct.ft2_source** %3, align 8
  %29 = getelementptr inbounds %struct.ft2_source, %struct.ft2_source* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = call i32 @FT_Done_Face(i32* %30)
  %32 = load %struct.ft2_source*, %struct.ft2_source** %3, align 8
  %33 = getelementptr inbounds %struct.ft2_source, %struct.ft2_source* %32, i32 0, i32 0
  store i32* null, i32** %33, align 8
  br label %34

34:                                               ; preds = %27, %22
  %35 = load i32, i32* @ft2_lib, align 4
  %36 = load i8*, i8** %5, align 8
  %37 = load i32, i32* %4, align 4
  %38 = load %struct.ft2_source*, %struct.ft2_source** %3, align 8
  %39 = getelementptr inbounds %struct.ft2_source, %struct.ft2_source* %38, i32 0, i32 0
  %40 = call i64 @FT_New_Face(i32 %35, i8* %36, i32 %37, i32** %39)
  %41 = icmp eq i64 %40, 0
  %42 = zext i1 %41 to i32
  store i32 %42, i32* %2, align 4
  br label %43

43:                                               ; preds = %34, %21
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i8* @get_font_path(i32, i32, i32, i32, i32*) #1

declare dso_local i32 @FT_Done_Face(i32*) #1

declare dso_local i64 @FT_New_Face(i32, i8*, i32, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
